--- a/app/views/books/_index.html.erb
+++ b/app/views/books/_index.html.erb
@@ -4,6 +4,9 @@
       <th></th>
       <th>Title</th>
       <th>Opinion</th>
+
+      <th></th>
+      <th></th>
       <th colspan="3"></th>
     </tr>
   </thead>
@@ -16,6 +19,29 @@
         </td>
         <td><%= link_to book.title,book %></td>
         <td><%= book.body %></td>
+
+
+        <td>
+          <% if book.favorited_by?(current_user) %>
+        <p >
+          <%= link_to book_favorite_path(book),class:"text-danger",method: :delete do %>
+            ♥<%= book.favorites.count %>
+          <% end %>
+        </p>
+          <% else %>
+        <p>
+          <%= link_to book_favorite_path(book), method: :post do %>
+            ♥<%= book.favorites.count %>
+          <% end %>
+        </p>
+          <% end %>
+        </td>
+        
+        <td>
+        <p>コメント数：<%= book.post_comments.count %></p>
+        </td>
+
+        
       </tr>
     <% end %>
   </tbody>
