--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -3,11 +3,11 @@
     <div class='col-md-3'>
       <h2>User info</h2>
       <%= render 'users/info' , user: @user %>
-      
+
       <h2 class="mt-3">New book</h2>
       <%= render 'form', book: @new %>
     </div>
-    
+
     <div class='col-md-8 offset-md-1'>
   		<h2>Book detail</h2>
   		<table class='table'>
@@ -19,13 +19,54 @@
           </td>
           <td><%= link_to @book.title, @book %></td>
           <td><%= @book.body %></td>
-          
+
+          <td>
+            <% if @book.favorited_by?(current_user) %>
+          <p >
+            <%= link_to book_favorite_path(@book),class:"text-danger",method: :delete do %>
+              ♥<%= @book.favorites.count %>
+            <% end %>
+          </p>
+            <% else %>
+          <p>
+            <%= link_to book_favorite_path(@book), method: :post do %>
+              ♥<%= @book.favorites.count %>
+            <% end %>
+          </p>
+            <% end %>
+          </td>
+
+          <td>
+          <p>コメント数：<%= @book.post_comments.count %></p>
+          </td>
+
+
           <% if @user == current_user %>
             <td><%= link_to 'Edit', edit_book_path(@book), class: "btn btn-sm btn-success" %></td>
             <td><%= link_to 'Destroy', @book, method: :delete, data: { confirm: '本当に消しますか？' }, class: "btn btn-sm btn-danger"%></td>
           <% end %>
         </tr>
       </table>
+
+      <div>
+      <% @book.post_comments.each do |post_comment| %>
+        <p><%= image_tag post_comment.user.get_profile_image, size:"100x100" %></p>
+        <%= post_comment.user.name %>
+        <%= post_comment.created_at.strftime('%Y/%m/%d') %><%= post_comment.comment %>
+
+        <% if post_comment.user == current_user %>
+          <%= link_to 'Destroy',book_post_comment_path(@book.id,post_comment.id), method: :delete, class: "btn btn-sm btn-danger"%>
+        <% end %>
+
+      <% end %>
+      </div>
+      <div>
+        <%= form_with model: [@book, @post_comment] do |f| %>
+          <%= f.text_area :comment, class: 'form-control book_body'%>
+          <%= f.submit "送信" %>
+        <% end %>
+      </div>
+
     </div>
   </div>
 </div>
