--- a/app/views/books/_index.html.erb
+++ b/app/views/books/_index.html.erb
@@ -21,27 +21,18 @@
         <td><%= book.body %></td>
 
 
-        <td>
-          <% if book.favorited_by?(current_user) %>
-        <p >
-          <%= link_to book_favorite_path(book),class:"text-danger",method: :delete do %>
-            ♥<%= book.favorites.count %>
-          <% end %>
-        </p>
-          <% else %>
-        <p>
-          <%= link_to book_favorite_path(book), method: :post do %>
-            ♥<%= book.favorites.count %>
-          <% end %>
-        </p>
-          <% end %>
+        <td id="favorite_btn_<%= book.id %>">
+
+          <%= render "favorites/btn", book: book %>
         </td>
-        
+
+
+
         <td>
         <p>コメント数：<%= book.post_comments.count %></p>
         </td>
 
-        
+
       </tr>
     <% end %>
   </tbody>
