--- a/app/views/books/_index.html.erb
+++ b/app/views/books/_index.html.erb
@@ -12,26 +12,23 @@
   </thead>
   <tbody>
     <% books.each do |book| %>
+    
       <tr>
         <td><%= link_to(book.user) do %>
           <%= image_tag book.user.get_profile_image, size:'50x50' %>
           <% end %>
         </td>
+        
         <td><%= link_to book.title,book %></td>
         <td><%= book.body %></td>
 
-
-        <td id="favorite_btn_<%= book.id %>">
-
+        <td class=<%= "favorite_btn_" + book.id.to_s %> >
           <%= render "favorites/btn", book: book %>
         </td>
 
-
-
-        <td>
-        <p>コメント数：<%= book.post_comments.count %></p>
+        <td class="comments-count">
+          コメント数：<%= book.post_comments.count %>
         </td>
-
 
       </tr>
     <% end %>
