--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -11,7 +11,8 @@
     <div class='col-md-8 offset-md-1'>
       <h2>Book detail</h2>
       <table class='table'>
-  		  <tr>
+        <tr id="book_<%= @book.id %>">
+          
           <td><%= link_to(@book.user) do %>
             <%= image_tag @book.user.get_profile_image, size:"75x75" %><br>
             <%= @book.user.name %>
@@ -20,7 +21,7 @@
           <td><%= link_to @book.title, @book %></td>
           <td><%= @book.body %></td>
 
-          <td id="favorite_btn_<%= @book.id %>">
+          <td class=<%= "favorite_btn_" + @book.id.to_s %>>
             <%= render "favorites/btn", book: @book %>
           </td>
 
@@ -58,7 +59,7 @@
 
 
       <div>
-        <%= form_with model: [@book, @post_comment] do |f| %>
+        <%= form_with model: [@book, @post_comment], local: false do |f| %>
           <%= f.text_area :comment, class: 'form-control book_body'%>
           <%= f.submit "送信" %>
         <% end %>
