--- a/app/views/favorites/create.js.erb
+++ b/app/views/favorites/create.js.erb
@@ -1,2 +1,1 @@
-$("#favorite_btn_<%= @book.id %>").html("<%= j(render 'favorites/btn', book: @book) %>");
-
+$(".favorite_btn_<%= @book.id %>").html("<%= j(render 'favorites/btn', book: @book) %>");
