--- a/app/views/books/_form.html.erb
+++ b/app/views/books/_form.html.erb
@@ -1,3 +1,5 @@
+<h2 class="mt-3">New book</h2>
+
 <%= form_with model: book,local:true do |f| %>
   <div class="form-group">
     <%= f.label :title %>
