--- a/app/views/groups/index.html.erb
+++ b/app/views/groups/index.html.erb
@@ -2,6 +2,10 @@
   <%= flash[:notice] %>
   <div class='row'>
     <div class='col-md-3'>
+      
+      <%= render 'users/info', user: current_user %>
+      <%= render 'books/form', book: @book %>
+      
     </div>
 
     <div class='col-md-8 offset-md-1'>
