--- a/app/views/groups/show.html.erb
+++ b/app/views/groups/show.html.erb
@@ -52,6 +52,10 @@
               <% end %>
             </td>
             
+            <td>
+              <%= link_to 'Notice an Event',group_new_mail_path(@group), class: "btn btn-sm btn-info" %>
+            </td>
+            
           </tr>
         </tbody>
       </table>
