--- a/app/views/books/_index.html.erb
+++ b/app/views/books/_index.html.erb
@@ -25,7 +25,9 @@
         <td class=<%= "favorite_btn_" + book.id.to_s %> >
           <%= render "favorites/btn", book: book %>
         </td>
-
+        
+        <td><%= render "books/static.rate", book: book %></td>
+        
         <td class="comments-count">
           コメント数：<%= book.post_comments.count %>
         </td>
