--- a/app/views/books/_form.html.erb
+++ b/app/views/books/_form.html.erb
@@ -34,7 +34,7 @@
     </script>
   <% else %>
     <div class="form-group">
-      <%= render "books/static.rate", book: book %>
+      <%= render "static.rate", book: book %>
     </div>
   <% end %>
   
