--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -6,12 +6,17 @@
       
       <%= render 'users/info', user: current_user %>
       
-      <%= render 'form', book: @book %>
+      <%= render 'form', book: @book,tag_list: @tag_list %>
     </div>
     
     
     <div class='col-md-8 offset-md-1'>
+      
+      
       <h2>Books</h2>
+      <%= link_to '新しい順', books_path(latest: "true") %>
+      |<%= link_to '古い順', books_path(old: "true") %>
+      |<%= link_to '評価の高い順', books_path(star_count: "true") %>
       <%= render 'index', books: @books%>
     </div>
   </div>
